# lexicog

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/serve/ocr/: mod.rs
src/features/main/pages/: MainPage.tsx
src/i18n/: en.json  zh-CN.json
src/types/: notification.ts
